cluster/grafana/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    prometheus.io/scrape: "true"
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
